--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,7 @@
     <title>Example</title>
 </head>
 <body>
+    <{{component-name}}></{{component-name}}>
     <script type="module" src="./index.ts"></script>
   </body>
 </html>
